--- a/public/css/cliente.css
+++ b/public/css/cliente.css
@@ -58,34 +58,101 @@
   display: block;
   font-size: 12px;
   margin-bottom: 10px; }
-.modal-body input {
-  width: 42%;
+.modal-body input[type=text], .modal-body input[type=number] {
   border-style: none;
   border-bottom: 1px solid;
   border-color: #000;
   background-color: transparent;
   outline: none;
   height: 40px;
-  font-size: 16px; }
+  font-size: 16px;
+  margin-bottom: 10px; }
 .modal-body .error {
   margin-top: 10px;
-  background-color: #cc05058c;
+  background-color: #cc05056b;
+  padding: 0px 10px;
   border-radius: 10px;
-  color: #cc0605;
-  border-color: #cc0605; }
+  color: #000;
+  border-bottom-color: #cc0605;
+  border-bottom-right-radius: unset;
+  border-bottom-left-radius: unset; }
+.modal-body .cant-error {
+  background-color: #cc05056b !important;
+  border-radius: 10px;
+  padding-left: 10px;
+  color: #000;
+  border-bottom-color: #cc0605;
+  border-bottom-right-radius: unset;
+  border-bottom-left-radius: unset; }
 .modal-body .content-button {
   display: flex;
   justify-content: right; }
 .modal-body input[type=number] {
-  -moz-appearance: textfield; }
+  appearance: textfield; }
+.modal-body select {
+  display: inline-block;
+  width: 100%;
+  max-width: 250px;
+  padding: 8px 10px;
+  border: 1px;
+  border-style: solid;
+  border-color: #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  background-color: #fff; }
+.modal-body .content-form {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px; }
+  .modal-body .content-form select {
+    width: 50%;
+    height: 100%; }
+  .modal-body .content-form input {
+    width: 30%;
+    min-width: 170px;
+    height: 34px;
+    border-color: #c18700; }
+  .modal-body .content-form span[data-descr] {
+    display: initial;
+    width: 20px;
+    height: 20px;
+    position: relative;
+    text-decoration: underline;
+    color: #000;
+    top: 11px;
+    right: 23px;
+    cursor: help; }
+    .modal-body .content-form span[data-descr]:hover::after, .modal-body .content-form span[data-descr]:focus::after {
+      content: attr(data-descr);
+      position: absolute;
+      left: 0;
+      top: 24px;
+      min-width: 205px;
+      border: 1px #aaaaaa solid;
+      border-radius: 10px;
+      background-color: #e5e5e5;
+      padding: 12px;
+      color: #000000;
+      font-size: 14px;
+      z-index: 1; }
+    .modal-body .content-form span[data-descr] i {
+      font-size: medium; }
+.modal-body .content-input {
+  width: 100%;
+  display: none;
+  justify-content: center; }
+  .modal-body .content-input label {
+    display: block;
+    margin-bottom: 10px; }
+  .modal-body .content-input span {
+    display: inline !important;
+    font-size: medium; }
 
 .modal-header {
   width: auto; }
   .modal-header .title {
     display: inline-block;
     width: 50%; }
-    .modal-header .title h2 {
-      margin-left: 15px; }
   .modal-header .closed {
     display: inline-flex;
     width: 45%;
@@ -98,7 +165,7 @@
         color: rgba(0, 0, 0, 0.808); }
 
 .modal {
-  display: block !important; }
+  display: block; }
 
 .activo {
   display: block !important; }
@@ -107,12 +174,29 @@
   display: none !important; }
 
 #Importe, #Destinatario, #Motivo, #nuevo {
-  display: none;
-  padding: 10px; }
+  display: none; }
   #Importe h3, #Destinatario h3, #Motivo h3, #nuevo h3 {
     padding-bottom: 10px; }
 
-input[type=radio] {
-  display: none; }
+.guardados {
+  padding: 10px; }
+  .guardados label {
+    display: block;
+    padding: 10px;
+    border-style: none;
+    margin-bottom: 10px;
+    box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
+    border-radius: 10px;
+    cursor: pointer; }
+  .guardados input[type=radio] {
+    display: contents;
+    visibility: hidden;
+    width: 0px;
+    height: 0px; }
+    .guardados input[type=radio]:checked + label {
+      background-color: #3e8692;
+      color: #fff; }
+  .guardados .disable + label {
+    display: none !important; }
 
 /*# sourceMappingURL=cliente.css.map */
