--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -88,12 +88,13 @@
   .menu button {
     display: block;
     position: absolute;
-    text-align: right;
     background-color: #212121;
     border-color: #212121;
     color: #999;
     cursor: pointer;
-    transform: translateX(160px); }
+    transform: translateX(180px);
+    max-width: 45px;
+    padding: 0px 10px; }
     .menu button:hover {
       color: #fff;
       background-color: #5fa2db;
