--- a/public/css/perfil.css
+++ b/public/css/perfil.css
@@ -69,20 +69,23 @@
         background-color: #c18700b0;
         color: #000; }
     .content .footer .activo {
-      border-color: #000 !important;
+      border-color: #000;
       border-top-style: solid;
       border-top-width: 1px;
       border-right-style: solid;
       border-right-width: 1px;
       border-left-style: solid;
       border-left-width: 1px;
-      background-color: #c18700b0 !important; }
+      background-color: #c18700b0; }
     .content .footer .active {
-      display: block !important; }
+      display: flex !important; }
     .content .footer #edit-content {
-      display: none; }
-      .content .footer #edit-content input {
-        width: 15%;
+      width: 100%;
+      display: none;
+      justify-content: center; }
+      .content .footer #edit-content .content-inputs input {
+        display: block;
+        width: 400px;
         min-width: 220px;
         padding: 15px;
         border: 1px solid #ccc;
@@ -91,52 +94,57 @@
         box-sizing: border-box;
         color: #2C3E50;
         font-size: 13px; }
-    .content .footer #configuracion-content {
-      display: none; }
-    .content .footer #notifications-content {
-      display: none; }
-    .content .footer label {
-      cursor: pointer;
-      text-indent: -9999px;
-      width: 50px;
-      height: 30px;
-      background: grey;
-      display: block;
-      border-radius: 100px;
-      position: relative; }
-      .content .footer label:after {
-        content: '';
-        position: absolute;
-        top: 5px;
-        left: 5px;
-        width: 20px;
-        height: 20px;
-        background: #fff;
-        border-radius: 90px;
-        transition: 0.3s; }
-    .content .footer .config .option {
-      display: block;
+      .content .footer #edit-content .content-inputs #demo, .content .footer #edit-content .content-inputs #demo2 {
+        display: block;
+        font-size: small; }
+      .content .footer #edit-content .content-inputs #demo {
+        margin-bottom: 5px; }
+    .content .footer #configuracion-content, .content .footer #notifications-content {
+      display: none;
       margin-top: 25px; }
-      .content .footer .config .option p {
-        display: inline-block;
-        width: 10%;
-        margin-right: 10px; }
-      .content .footer .config .option label {
+      .content .footer #configuracion-content .content-form, .content .footer #notifications-content .content-form {
+        width: 100%; }
+        .content .footer #configuracion-content .content-form .right, .content .footer #notifications-content .content-form .right {
+          display: inline-flex;
+          justify-content: right; }
+        .content .footer #configuracion-content .content-form .left, .content .footer #notifications-content .content-form .left {
+          display: inline; }
+      .content .footer #configuracion-content p, .content .footer #notifications-content p {
+        width: 50%;
         display: inline-block; }
-    .content .footer input[type=checkbox] {
-      height: 0;
-      width: 0;
-      visibility: hidden; }
-    .content .footer input:checked + label {
-      background-color: #3e8692; }
-    .content .footer input:checked + label:after {
-      left: calc(100% - 5px);
-      transform: translateX(-100%); }
-    .content .footer label:active:after {
-      width: 40px; }
+      .content .footer #configuracion-content label, .content .footer #notifications-content label {
+        display: inline-block;
+        width: 50px;
+        height: 30px;
+        cursor: pointer;
+        text-indent: -9999px;
+        background-color: grey;
+        border-radius: 100px;
+        position: relative; }
+        .content .footer #configuracion-content label:after, .content .footer #notifications-content label:after {
+          width: 20px;
+          height: 20px;
+          position: absolute;
+          content: '';
+          top: 5px;
+          left: 5px;
+          background-color: #fff;
+          border-radius: 90px;
+          transition: 0.3s; }
+        .content .footer #configuracion-content label:active:after, .content .footer #notifications-content label:active:after {
+          width: 40px; }
+      .content .footer #configuracion-content input[type=number], .content .footer #notifications-content input[type=number] {
+        height: 0;
+        width: 0;
+        visibility: hidden; }
+      .content .footer #configuracion-content .active-check + label, .content .footer #notifications-content .active-check + label {
+        background-color: #3e8692; }
+      .content .footer #configuracion-content .active-check + label:after, .content .footer #notifications-content .active-check + label:after {
+        left: calc(100% - 5px);
+        transform: translateX(-100%); }
   .content .content-button {
     display: flex;
-    justify-content: right; }
+    justify-content: right !important; }
     .content .content-button button {
       border-radius: 10px;
       border-style: none;
@@ -144,5 +152,11 @@
       padding: 15px; }
       .content .content-button button:hover {
         background-color: #007a28; }
+  .content .response {
+    padding: 10px;
+    color: #fff;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    text-align: center; }
 
 /*# sourceMappingURL=perfil.css.map */
