--- a/public/sass/perfil.scss
+++ b/public/sass/perfil.scss
@@ -100,107 +100,119 @@
         }
 
         .activo {
-            border-color: #000!important;
+            border-color: #000;
             border-top-style: solid;
             border-top-width: 1px;
             border-right-style: solid;
             border-right-width: 1px;
             border-left-style: solid;
             border-left-width: 1px;
-            background-color: #c18700b0!important;
+            background-color: #c18700b0;
         }
 
         .active {
-            display: block!important;
+            display: flex!important;
         }
 
         #edit-content {
+            width: 100%;
             display: none;
+            justify-content: center;
 
-            input { 
-                width: 15%;
-                min-width: 220px;
-                padding: 15px;
-                border: 1px solid #ccc;
-                border-radius: 10px;
-                margin-bottom: 10px;
-                box-sizing: border-box;
-                color: #2C3E50;
-                font-size: 13px;
-            }
-        }
+            .content-inputs {   
 
-        #configuracion-content {
-            display: none;
-        }
-
-        #notifications-content {
-            display: none;
-        }
-
-        label {
-            cursor: pointer;
-            text-indent: -9999px;
-            width: 50px;
-            height: 30px;
-            background: grey;
-            display: block;
-            border-radius: 100px;
-            position: relative;
-
-            &:after {
-                content: '';
-                position: absolute;
-                top: 5px;
-                left: 5px;
-                width: 20px;
-                height: 20px;
-                background: #fff;
-                border-radius: 90px;
-                transition: 0.3s;
-            }
-        }
-
-        .config  {
-            .option {
-                display: block;
-                margin-top: 25px;
-
-                p {
-                    display: inline-block;
-                    width: 10%;
-                    margin-right:10px;
-
+                input { 
+                    display: block;
+                    width: 400px;
+                    min-width: 220px;
+                    padding: 15px;
+                    border: 1px solid #ccc;
+                    border-radius: 10px;
+                    margin-bottom: 10px;
+                    box-sizing: border-box;
+                    color: #2C3E50;
+                    font-size: 13px;
                 }
-                label {
-                    display: inline-block;
+                
+                #demo, #demo2 {
+                    display: block;
+                    font-size: small;
+                }
+                #demo {
+                    margin-bottom: 5px;
                 }
             }
         }
 
-        input[type=checkbox]{
-            height: 0;
-            width: 0;
-            visibility: hidden;
-        }
+        #configuracion-content, #notifications-content {
+            display: none;
+            margin-top: 25px;
 
-        input:checked + label {
-            background-color: #3e8692;
-        }
+            .content-form {
+                width: 100%;
+                
+                .right {
+                    display: inline-flex;
+                    justify-content: right;
+                }
+                
+                .left {
+                    display: inline;
+                }
+            }
 
-        input:checked + label:after {
-            left: calc(100% - 5px);
-            transform: translateX(-100%);
-        }
+            p {
+                width: 50%;
+                display: inline-block;
+            }
 
-         label:active:after {
-            width: 40px;
-        }    
+            label {
+                display: inline-block;
+                width: 50px;
+                height: 30px;
+                cursor: pointer;
+                text-indent: -9999px;
+                background-color: grey;
+                border-radius: 100px;
+                position: relative;
+    
+                &:after {
+                    width: 20px;
+                    height: 20px;
+                    position: absolute;
+                    content: '';
+                    top: 5px;
+                    left: 5px;
+                    background-color: #fff;
+                    border-radius: 90px;
+                    transition: 0.3s;
+                }
+
+                &:active:after {
+                    width: 40px;
+                }
+            }
+
+            input[type=number]{
+                height: 0;
+                width: 0;
+                visibility: hidden;
+            }
+    
+            .active-check + label {
+                background-color: #3e8692;
+            }
+    
+            .active-check + label:after {
+                left: calc(100% - 5px);
+                transform: translateX(-100%);
+            } 
+        }
     }
 
     .content-button {
         display: flex;
-        justify-content: right;
+        justify-content: right!important;
 
         button {
             border-radius: 10px;
@@ -212,5 +224,13 @@
                 background-color: #007a28;
             }
         }
+    }
+
+    .response {
+        padding: 10px;
+        color: #fff;
+        margin-bottom: 10px;
+        border-radius: 10px;
+        text-align: center;
     }
 }
