--- a/public/sass/ver.scss
+++ b/public/sass/ver.scss
@@ -15,6 +15,8 @@
 
     .img {
         grid-area: img;
+        display: flex;
+        justify-content: center;
         border-style: solid;
         border-width: 1px;
         border-color:#000;
