--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -11,7 +11,7 @@
   background-color: black;
   background-color: rgba(0, 0, 0, 0.4); }
   .modal .modal-content {
-    transform: translate(0%, 100%);
+    transform: translate(0%, 100px);
     position: relative;
     background-color: #fefefe;
     margin: auto;
