--- a/public/sass/ver.scss
+++ b/public/sass/ver.scss
@@ -17,9 +17,10 @@
         grid-area: img;
         display: flex;
         justify-content: center;
-        border-style: solid;
-        border-width: 1px;
-        border-color:#000;
+        border-style: none;
+        padding: 10px;
+        border-radius: 10px;
+        box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
         
         img {
             width: 200px;
@@ -30,10 +31,10 @@
 
     .info {
         grid-area: info;
-        border-style: solid;
-        border-width: 1px;
-        border-color:#000;
         padding: 10px;
+        border-style: none;
+        border-radius: 10px;
+        box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
 
         p {
             display: block;
@@ -42,13 +43,21 @@
                 font-weight: bold;
             }
         }
+
+        .content-btn-estadodecuenta {
+            display: flex;
+            justify-content: right;
+            margin-top: 85px; 
+        }
     }
 
     .prestamos {
         grid-area: prestamos;
-        border-style: solid;
-        border-width: 1px;
-        border-color:#000;
+        border-style: none;
+        margin-top: 10px;
+        padding: 10px;
+        border-radius: 10px;
+        box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
     }
 }
 
@@ -66,4 +75,116 @@
     &:hover {
         background-color: #3e8692;
     }
+}
+
+.content-table {
+    display: flex;
+    justify-content: center;
+
+
+    table {
+        margin-top: 15px;
+        margin-bottom: 15px;
+    	border-width: 1px;
+    	border-spacing: 0px;
+    	border-style: solid;
+    	border-collapse: separate;
+        background-color: #fff;
+
+        tr, td {
+            border-width: 1px;
+            padding: 5px;
+            border-style: solid;
+            border-color: black;
+            background-color: #fff;
+
+        }
+    }
+}
+
+.modal {
+    display: block;
+    .modal-content {
+        max-width: 550px;
+
+        .modal-header { 
+            width: auto;
+              
+            .title {
+                display: inline-block;   
+                width: 50%;
+            }
+        
+            .closed {
+                display: inline-flex;
+                width: 45%;
+                justify-content: right;
+                
+                a {
+                    color: #000;
+                    cursor: pointer;
+                    font-size: 20px;
+        
+                    &:hover {
+                        color: rgba(0, 0, 0, 0.808);
+                    }
+                }
+        
+            }
+        } 
+        
+        .modal-body {
+            display: flex;
+            justify-content: center;
+    
+            table {
+                margin-top: 15px;
+                margin-bottom: 15px;
+                border-width: 1px;
+                border-spacing: 0px;
+                border-style: solid;
+                border-collapse: separate;
+                background-color: #fff;
+            
+                tr, td {
+                    border-width: 1px;
+                    padding: 5px;
+                    border-style: solid;
+                    border-color: black;
+                    background-color: #fff;
+            
+                }
+    
+                thead tr td{
+                    background-color: #0d4755;
+                    color: #fff;
+                }
+            }
+    
+            .status {
+                font-size: small;
+                color: #d9d9d9;
+                
+                i {
+                    border-radius: 15px;
+                    border-style: none;
+                    box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
+                }
+            }
+    
+            .pagado {
+                color: #00a135;
+            }
+    
+            .pendiente {
+                color: #e5be01;
+            }
+    
+            .atrasado {
+                color: #cc0605;
+            }
+        }   
+
+    }
+    
 }
