--- a/public/sass/sign_up.scss
+++ b/public/sass/sign_up.scss
@@ -6,7 +6,7 @@
     width: 400px;
     position: fixed;
     left: 50%;
-    transform: translate(calc(-50% + 80px), 20%);
+    transform: translate(calc(-50% + 80px), 50px);
     
     .form-content {
         margin: 0 10%;
