--- a/public/css/cliente.css
+++ b/public/css/cliente.css
@@ -14,25 +14,30 @@
     box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4); }
     .content .massage p {
       padding: 10px; }
-  .content .header {
+  .content header {
+    display: flex;
     grid-area: header;
     padding: 10px;
     background-color: #D9D9D9;
     border-radius: 10px;
     box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4); }
-    .content .header .content-customer-data {
+    .content header .img {
       display: inline-flex;
-      width: 100%; }
-      .content .header .content-customer-data img {
+      width: 15%;
+      min-width: 150px;
+      padding: 10px;
+      justify-content: center; }
+      .content header .img img {
         width: 150px;
         height: 150px;
         border-radius: 50%; }
-      .content .header .content-customer-data h1 {
-        margin-left: 2%;
-        margin-top: 4%;
-        text-align: center;
-        font-size: 20px;
-        font-weight: bold; }
+    .content header .title {
+      display: inline-flex;
+      width: 85%;
+      padding: 10px;
+      align-items: center; }
+      .content header .title h1 {
+        font-size: 20px; }
   .content .body {
     grid-area: body;
     margin-top: 20px;
@@ -42,15 +47,32 @@
     border-radius: 10px;
     box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4); }
     .content .body .content-buttons {
+      width: 100%;
       height: 50%;
       display: flex;
       justify-content: center;
       align-items: center; }
-      .content .body .content-buttons button {
+      .content .body .content-buttons a {
         font-family: 'Antic Didone';
-        font-weight: bold; }
-    .content .body .btn span {
-      display: block; }
+        font-weight: bold;
+        width: 150px;
+        padding: 15px;
+        margin-left: 10px;
+        font-size: small;
+        border-radius: 10px;
+        border-style: solid;
+        border-color: #0d4755;
+        border-width: 1px;
+        background-color: #46808a;
+        color: #fff;
+        text-align: center;
+        text-decoration: none; }
+        .content .body .content-buttons a:hover {
+          background-color: #0d4755; }
+        .content .body .content-buttons a span {
+          display: block; }
+        .content .body .content-buttons a i {
+          font-size: 20px; }
     .content .body p > span {
       color: #0d4755; }
 
@@ -89,6 +111,14 @@
   justify-content: right; }
 .modal-body input[type=number] {
   appearance: textfield; }
+.modal-body .btn-Success {
+  margin-left: 10px;
+  background-color: #3e8692;
+  border-color: #000;
+  border-style: solid;
+  border-width: 1px; }
+  .modal-body .btn-Success:hover {
+    background-color: #0d4755; }
 .modal-body select {
   display: inline-block;
   width: 100%;
