--- a/public/sass/cliente.scss
+++ b/public/sass/cliente.scss
@@ -27,7 +27,8 @@
         }
     }
 
-    .header {
+    header {
+        display: flex;
         grid-area: header;
         padding: 10px;
         background-color: #D9D9D9;
@@ -35,23 +36,28 @@
         box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
 
         
-        .content-customer-data {
+        .img {
             display: inline-flex;
-            width: 100%;
+            width: 15%;
+            min-width: 150px;
+            padding: 10px;
+            justify-content: center;
+
             
             img {
                 width:  150px;
                 height: 150px;
                 border-radius: 50%;
             }
+        }
 
-            h1 {
-                margin-left: 2%;
-                margin-top: 4%;
-                text-align: center;
-                font-size: 20px;
-                font-weight: bold;
-            }
+        .title {
+            display: inline-flex;
+            width: 85%;
+            padding: 10px;
+            align-items: center;
+
+            h1 {font-size: 20px;}
         }
     }
 
@@ -65,19 +71,34 @@
         box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
 
         .content-buttons {
+            width: 100%;
             height: 50%;
             display: flex;
             justify-content: center;
             align-items: center;
 
-            button {
+            a {
                 font-family: 'Antic Didone';
                 font-weight: bold;
-            }
-        }
+                width: 150px;
+                padding: 15px;
+                margin-left: 10px;
+                font-size: small;
+                border-radius: 10px;
+                border-style: solid;
+                border-color: #0d4755;
+                border-width: 1px;
+                background-color: #46808a;
+                color: #fff;
+                text-align: center;
+                text-decoration: none;
+                
+                &:hover {background-color: #0d4755;}
 
-        .btn span {
-            display: block;
+                span {display: block;}
+
+                i {font-size: 20px;}
+            }
         }
 
         p > span {
@@ -133,8 +154,16 @@
         justify-content: right;
     }
 
-    input[type=number]{
-        appearance: textfield;
+    input[type=number]{ appearance: textfield;}
+
+    .btn-Success {
+        margin-left: 10px;
+        background-color: #3e8692;
+        border-color: #000;
+        border-style: solid;
+        border-width: 1px;
+    
+        &:hover {background-color: #0d4755;}
     }
 
     select {
