--- a/public/sass/cliente.scss
+++ b/public/sass/cliente.scss
@@ -24,6 +24,11 @@
 
         p {
             padding: 10px;
+            border-radius: 10px;
+        }
+
+        .bg-error {
+            color: #fff;
         }
     }
 
