--- a/public/css/ver.css
+++ b/public/css/ver.css
@@ -4,8 +4,18 @@
   height: 100%;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-area: repeat(4, 1fr);
-  grid-template-areas: "img info info info info" "prestamos prestamos prestamos prestamos prestamos" "prestamos prestamos prestamos prestamos prestamos" "prestamos prestamos prestamos prestamos prestamos"; }
+  grid-area: repeat(5, 1fr);
+  grid-template-areas: "message message message message message" "img info info info info" "prestamos prestamos prestamos prestamos prestamos" "prestamos prestamos prestamos prestamos prestamos" "prestamos prestamos prestamos prestamos prestamos"; }
+  .content .message {
+    grid-area: message;
+    margin-bottom: 10px;
+    border-radius: 15px;
+    box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4); }
+    .content .message p {
+      padding: 10px;
+      border-radius: 10px; }
+    .content .message .bg-error {
+      color: #fff; }
   .content .img {
     grid-area: img;
     display: flex;
@@ -56,19 +66,5 @@
 .content-table {
   display: flex;
   justify-content: center; }
-  .content-table table {
-    margin-top: 15px;
-    margin-bottom: 15px;
-    border-width: 1px;
-    border-spacing: 0px;
-    border-style: solid;
-    border-collapse: separate;
-    background-color: #fff; }
-    .content-table table tr, .content-table table td {
-      border-width: 1px;
-      padding: 5px;
-      border-style: solid;
-      border-color: black;
-      background-color: #fff; }
 
 /*# sourceMappingURL=ver.css.map */
