--- a/public/sass/global.scss
+++ b/public/sass/global.scss
@@ -207,3 +207,42 @@ $margin: (
         color:#fff!important;
     }
 }
+
+table {
+    margin-top: 15px;
+    margin-bottom: 15px;
+	border-width: 1px;
+	border-spacing: 0px;
+	border-style: solid;
+	border-collapse: separate;
+    background-color: #fff;
+
+    tr, td {
+        border-width: 1px;
+        padding: 5px;
+        border-style: solid;
+        border-color: black;
+        background-color: #fff;
+    }
+
+    thead {
+        tr > td {
+            text-align: center;
+            padding: 10px;
+        }
+    }
+
+    tr, td {
+        border-width: 1px;
+        padding: 5px;
+        border-style: solid;
+        border-color: black;
+        background-color: #fff;
+
+    }
+
+    thead tr td{
+        background-color: #0d4755;
+        color: #fff;
+    }
+}
