--- a/public/sass/ver.scss
+++ b/public/sass/ver.scss
@@ -5,13 +5,30 @@
     height: 100%;
     display: grid;
     grid-template-columns: repeat(5,1fr);
-    grid-area: repeat(4 ,1fr);
+    grid-area: repeat(5 ,1fr);
     grid-template-areas: 
+        'message message message message message'
         'img info info info info'
         'prestamos prestamos prestamos prestamos prestamos'
         'prestamos prestamos prestamos prestamos prestamos'
         'prestamos prestamos prestamos prestamos prestamos'
     ;
+
+    .message {
+        grid-area: message;
+        margin-bottom: 10px;
+        border-radius: 15px;
+        box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
+
+        p {
+            padding: 10px;
+            border-radius: 10px;
+        }
+
+        .bg-error {
+            color: #fff;
+        }
+    }
 
     .img {
         grid-area: img;
@@ -80,24 +97,4 @@
 .content-table {
     display: flex;
     justify-content: center;
-
-
-    table {
-        margin-top: 15px;
-        margin-bottom: 15px;
-    	border-width: 1px;
-    	border-spacing: 0px;
-    	border-style: solid;
-    	border-collapse: separate;
-        background-color: #fff;
-
-        tr, td {
-            border-width: 1px;
-            padding: 5px;
-            border-style: solid;
-            border-color: black;
-            background-color: #fff;
-
-        }
-    }
 }
