--- a/public/css/ver.css
+++ b/public/css/ver.css
@@ -12,7 +12,7 @@
     border-radius: 15px;
     box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4); }
     .content .message p {
-      padding: 10px;
+      padding: 5px;
       border-radius: 10px; }
     .content .message .bg-error {
       color: #fff; }
@@ -66,5 +66,19 @@
 .content-table {
   display: flex;
   justify-content: center; }
+  .content-table .pagar {
+    background-color: #c18700;
+    color: #fff;
+    border-style: none;
+    border-radius: 10px; }
+    .content-table .pagar:hover {
+      background-color: #ad7900; }
+  .content-table .ver {
+    background-color: #0d4755;
+    color: #fff;
+    border-style: none;
+    border-radius: 10px; }
+    .content-table .ver:hover {
+      background-color: #0a3944; }
 
 /*# sourceMappingURL=ver.css.map */
