--- a/public/sass/ver.scss
+++ b/public/sass/ver.scss
@@ -21,7 +21,7 @@
         box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
 
         p {
-            padding: 10px;
+            padding: 5px;
             border-radius: 10px;
         }
 
@@ -97,4 +97,26 @@
 .content-table {
     display: flex;
     justify-content: center;
+
+    .pagar {
+        background-color: #c18700;
+        color: #fff;
+        border-style: none;
+        border-radius: 10px;
+    
+        &:hover {
+            background-color: #ad7900;
+        }
+    }
+    
+    .ver {
+        background-color: #0d4755;
+        color: #fff;
+        border-style: none;
+        border-radius: 10px;
+    
+        &:hover {
+            background-color: #0a3944;
+        }
+    }
 }
