--- a/public/css/cliente.css
+++ b/public/css/cliente.css
@@ -43,22 +43,25 @@
   .content .body {
     grid-area: body;
     margin-top: 20px;
-    height: 60vh;
-    padding: 10px;
+    height: 70vh;
     background-color: #D9D9D9;
     border-radius: 10px;
     box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4); }
+    .content .body .info {
+      padding: 0 10px; }
+      .content .body .info > span {
+        color: #0d4755; }
     .content .body .content-buttons {
       width: 100%;
-      height: 50%;
       display: flex;
       justify-content: center;
-      align-items: center; }
+      align-items: center;
+      margin: 20px 0; }
       .content .body .content-buttons a {
         font-family: 'Antic Didone';
         font-weight: bold;
-        width: 150px;
-        padding: 15px;
+        width: 130px;
+        padding: 10px;
         margin-left: 10px;
         font-size: small;
         border-radius: 10px;
@@ -75,8 +78,40 @@
           display: block; }
         .content .body .content-buttons a i {
           font-size: 20px; }
-    .content .body p > span {
-      color: #0d4755; }
+    .content .body h4 {
+      margin-bottom: 10px;
+      padding: 0 10px; }
+    .content .body .movimientos {
+      width: 100%;
+      max-height: 220px;
+      overflow: auto; }
+      .content .body .movimientos .data {
+        padding: 10px;
+        color: #fff; }
+      .content .body .movimientos table {
+        border-style: none; }
+      .content .body .movimientos tr, .content .body .movimientos td {
+        border-style: none; }
+      .content .body .movimientos thead > tr > td {
+        background-color: #3e8692; }
+      .content .body .movimientos tbody tr, .content .body .movimientos tbody td {
+        border-bottom: solid 1px #3e8692; }
+      .content .body .movimientos tbody .informacion {
+        width: 100%; }
+        .content .body .movimientos tbody .informacion .cargo {
+          width: 100%;
+          font-size: 18px;
+          text-transform: lowercase; }
+          .content .body .movimientos tbody .informacion .cargo:first-letter {
+            text-transform: uppercase; }
+      .content .body .movimientos tbody .cant {
+        font-size: large; }
+        .content .body .movimientos tbody .cant .menos {
+          font-size: medium;
+          color: #cc0605 !important; }
+        .content .body .movimientos tbody .cant .mas {
+          font-size: medium;
+          color: #00a135 !important; }
 
 .modal-body span {
   display: block;
@@ -93,11 +128,11 @@
   margin-bottom: 10px; }
 .modal-body .error {
   margin-top: 10px;
-  background-color: #cc05056b;
+  background-color: #cc05056b !important;
   padding: 0px 10px;
   border-radius: 10px;
   color: #000;
-  border-bottom-color: #cc0605;
+  border-bottom-color: #cc0605 !important;
   border-bottom-right-radius: unset;
   border-bottom-left-radius: unset; }
 .modal-body .cant-error {
@@ -190,11 +225,11 @@
     width: 45%;
     justify-content: right; }
     .modal-header .closed a {
-      color: #000;
+      color: #cc0605;
       cursor: pointer;
       font-size: 20px; }
       .modal-header .closed a:hover {
-        color: rgba(0, 0, 0, 0.808); }
+        color: #f20805; }
 
 .modal {
   display: block; }
