--- a/public/css/instrucciones.css
+++ b/public/css/instrucciones.css
@@ -11,21 +11,47 @@
     display: flex;
     justify-content: center; }
     .content .content-img img {
-      width: 300px;
+      width: 250px;
+      height: auto; }
+    .content .content-img p .logos {
+      width: 60px;
+      height: auto; }
+    .content .content-img p .logos2 {
+      width: 120px;
+      height: auto; }
+    .content .content-img p .logos3 {
+      width: 100px;
       height: auto; }
 
-.btn-back {
-  background-color: #0d4755;
-  border-style: solid;
-  border-width: 1px;
-  border-color: #000;
-  color: #fff;
-  padding: 10px;
-  min-width: 100px;
-  min-height: auto;
-  border-radius: 10px;
-  cursor: pointer; }
-  .btn-back:hover {
-    background-color: #3e8692; }
+.content-btn {
+  display: block ruby; }
+  .content-btn a {
+    display: block;
+    min-width: 100px;
+    min-height: auto;
+    background-color: #0d4755;
+    border-style: solid;
+    border-width: 1px;
+    color: #fff;
+    padding: 10px;
+    border-radius: 10px;
+    cursor: pointer;
+    text-decoration: none;
+    text-align: center; }
+    .content-btn a:hover {
+      background-color: #3e8692; }
+  .content-btn form {
+    width: 80%;
+    display: flex;
+    justify-content: right; }
+    .content-btn form button {
+      display: block;
+      background-color: #3e8692;
+      color: #fff;
+      border-style: none;
+      border-radius: 10px;
+      padding: 10px 20px; }
+      .content-btn form button:hover {
+        background-color: #387984; }
 
 /*# sourceMappingURL=instrucciones.css.map */
